--- a/aula6.html
+++ b/aula6.html
@@ -3,17 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Jimin</title>
+    <title>Olivia Isabel Rodrigo</title>
+    <img src="c:\Users\Angel Silva\Downloads\baixados-fotor-20240317112616.png">
 </head>
+<style>
+    body{
+        background-color: rgb(201, 161, 238);
+    }
+       h1{
+        color: rgb(182, 75, 224)
+       };
+       </style>
 <body>
-    <h1>Park Ji-min </h1>
-    <h3>Infância</h3>
-    <p>Park Ji-min OMC (hangul: 박지민[1]; hanja: 朴智旻; nascido em 13 de outubro de 1995),[9] mais frequentemente creditado na carreira musical apenas como Jimin (em coreano: 지민),[1] é um cantor e dançarino sul-coreano. Jimin ganhou destaque mundial como membro do grupo masculino BTS (também conhecido como Bangtan Boys), formado em 2013.[10][11] O grupo vendeu mais de dezesseis milhões de álbuns físicos só na Coreia do Sul, de acordo com o Gaon Music Chart, e se tornou o projeto musical com o maior número de vendas a se estrear na década de 2010.</p>
-    <h3>titúlo da seção</h3>
-    <p>Park Ji-min OMC (hangul: 박지민[1]; hanja: 朴智旻; nascido em 13 de outubro de 1995),[9] mais frequentemente creditado na carreira musical apenas como Jimin (em coreano: 지민),[1] é um cantor e dançarino sul-coreano. Jimin ganhou destaque mundial como membro do grupo masculino BTS (também conhecido como Bangtan Boys), formado em 2013.[10][11] O grupo vendeu mais de dezesseis milhões de álbuns físicos só na Coreia do Sul, de acordo com o Gaon Music Chart, e se tornou o projeto musical com o maior número de vendas a se estrear na década de 2010.</p>
-    <h3>titúlo da seção</h3>
-    <p>Park Ji-min OMC (hangul: 박지민[1]; hanja: 朴智旻; nascido em 13 de outubro de 1995),[9] mais frequentemente creditado na carreira musical apenas como Jimin (em coreano: 지민),[1] é um cantor e dançarino sul-coreano. Jimin ganhou destaque mundial como membro do grupo masculino BTS (também conhecido como Bangtan Boys), formado em 2013.[10][11] O grupo vendeu mais de dezesseis milhões de álbuns físicos só na Coreia do Sul, de acordo com o Gaon Music Chart, e se tornou o projeto musical com o maior número de vendas a se estrear na década de 2010.</p>
-    <h3>titúlo da seção</h3>
-    <p>Park Ji-min OMC (hangul: 박지민[1]; hanja: 朴智旻; nascido em 13 de outubro de 1995),[9] mais frequentemente creditado na carreira musical apenas como Jimin (em coreano: 지민),[1] é um cantor e dançarino sul-coreano. Jimin ganhou destaque mundial como membro do grupo masculino BTS (também conhecido como Bangtan Boys), formado em 2013.[10][11] O grupo vendeu mais de dezesseis milhões de álbuns físicos só na Coreia do Sul, de acordo com o Gaon Music Chart, e se tornou o projeto musical com o maior número de vendas a se estrear na década de 2010.</p>
-</body>
+    <h1>Olivia Isabel Rodrigo</h1>
+    <h2>Origem</h2>
+    <p>  Olivia Isabel Rodrigo (Murrieta, 20 de fevereiro de 2003) é uma cantora, compositora e atriz norte-americana. Ela alcançou a fama pela primeira vez como atriz infantil nos programas de televisão da Disney Bizaardvark (2016–2019) e High School Musical: The Musical: The Series (2019–2022).
+        Após assinar com Geffen e Interscope Records em 2020, Rodrigo lançou seu single de estreia, "Drivers License", que quebrou vários recordes e se tornou uma das canções mais vendidas de 2021, impulsionando ela para a fama mainstream. Ela seguiu com os singles "Deja Vu" e "Good 4 U", e lançou seu primeiro álbum de estúdio, Sour, em 2021, que obteve sucesso comercial e de crítica,  ganhando vários prêmios, incluindo três prêmios Grammy. Um documentário da Disney+, Olivia Rodrigo: Driving Home 2 U, lançado em 2022, narrando seu processo criativo com Sour.
+        Em 2023, Rodrigo lançou seu segundo álbum de estúdio, Guts, apoiado pelos singles "Vampire" e "Bad Idea Right?". Rodrigo alcançou três singles número um na Billboard Hot 100, dois álbuns número um na Billboard 200 ​​e cinco certificações multi-platina pela Recording Industry Association of America (RIAA). Além de outros reconhecimentos, ela ganhou um American Music Award, sete Billboard Music Awards e três MTV Video Music Awards. Time a nomeou a Artista do Ano de 2021 e a Billboard a nomeou Mulher do Ano em 2022.</p>
+        <img src="https://i.pinimg.com/236x/11/23/ce/1123ce9a8e366ee9d9f361affbe83cc4.jpg"
+        <li>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</li>
+        <h1></h1>
+    <h2>Vida e Carreira</h2>
+<p>  Olivia Isabel Rodrigo nasceu em 20 de fevereiro de 2003, no Rancho Springs Medical Center em Murrieta, Califórnia, filha única da professora Jennifer e do terapeuta familiar Chris Rodrigo.Ela cresceu na cidade vizinha Temecula.Rodrigo nasceu meio surda do ouvido esquerdo.Rodrigo é uma filipino-americana;seu pai é descendente de filipinos enquanto sua mãe tem ascendência alemã e irlandesa.Ela afirmou que seu bisavô paterno emigrou das Filipinas quando era adolescente e sua família segue as tradições e a cozinha filipinas. Ela cresceu ouvindo as músicas favoritas de rock alternativo de seus pais, como as bandas No Doubt, Pearl Jam, The White Stripes e Green Day.
+
+    Rodrigo começou a ter aulas de atuação e canto no jardim de infância e aprendeu a tocar piano logo depois. Rodrigo estudou na Lisa J. Mails Elementary School em Murrieta, participando do programa de teatro musical pós-escola. Rodrigo tocava violão aos 12 anos. Rodrigo começou a se interessar por compor depois de ouvir música country, especialmente a cantora e compositora Taylor Swift. Ela frequentou a Dorothy McElhinney Middle School em Murrieta por um ano, mas quando conseguiu seu papel em Bizaardvark mudou-se para Los Angeles e estudou em casa de 2016 até se formar em 2021.
+    
+    Rodrigo apareceu pela primeira vez na tela em um comercial da Old Navy. Pouco depois, em 2015, aos doze anos, ela fez sua estreia como atriz interpretando o papel principal de Grace Thomas no filme direto para vídeo An American Girl: Grace Stirs Up Success. Em 2016, Rodrigo recebeu reconhecimento por estrelar como Paige Olvera, guitarrista da série Bizaardvark do Disney Channel,e desempenhou o papel por três temporadas.
+    
+    Em fevereiro de 2019, ela foi escalada para o papel principal de Nini Salazar-Roberts na série da Disney+ High School Musical: The Musical: The Series, que estreou em novembro daquele ano.Rodrigo foi elogiada pela atuação,com Joel Keller do Decider descrevendo-a como "especialmente magnética". Em 2022, ela deixou o programa ao final da terceira temporada para focar na carreira musical.</p>
+   <img src="https://i.pinimg.com/236x/e6/2b/dd/e62bdd38aa01add71da5d0b89dac81e2.jpg"
+  <li>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</li>
+   <h1></h1>
+   <h2> Influências </h2>
+<p>  Em 2021, Olivia nomeou Taylor Swift e Lorde como seus ídolos e principais inspirações musicais, e se autodenominou a maior fã de Swift "em todo o mundo". Rodrigo mais tarde passou a dar créditos de interpolação a Swift e Jack Antonoff em sua canção "1 Step Forward, 3 Steps Back" e creditou retroativamente Swift, Antonoff e Annie Clark em sua canção "Deja Vu".Em 2022, ela chamou o membro da banda The White Stripes Jack White de seu "herói de todos os heróis".Outras influências declaradas no álbum de estreia de Rodrigo incluem Alanis Morissette, Kacey Musgraves, Fiona Apple, St. Vincent,Cardi B, Gwen Stefani, Avril Lavigne e Lana Del Rey.Quando se tratou de seu segundo álbum, Rodrigo aproveitou mais suas influências de punk e rock alternativo, como Babes in Toyland e Rage Against the Machine.</p>
+<img src="https://i.pinimg.com/236x/fd/91/5f/fd915f2ece1838b80e4d3be6a37ea48b.jpg"
+<li>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</li>
+   <h1></h1>
+   <h2>Composição e Voz</h2>
+<p>  O tipo de voz de Olivia é identificado como soprano.Os meios de comunicação geralmente descrevem Rodrigo como uma artista pop, renderizando musicalmente para estilos pop rock, teen pop, e indie pop, além de canalizar o rock alternativo dos anos 90. Rodrigo afirmou que quer ser uma compositora e não "a maior estrela pop que já existiu", e escolheu assinar com a Interscope/Geffen Records porque seu CEO John Janick elogiou suas composições, não sua "qualidade potencial de estrela". A jornalista musical Laura Snapes chamou Rodrigo de "porta-bandeira" de uma nova onda de compositores que se inclinam para power ballads "que são tão emocionais como sempre, mas projetam essa emoção para dentro, trocando o bombástico pelo silêncio", e descreveu seu estilo musical como enraizado na dor de cabeça, na saúde mental e na tristeza, sem ser melodramático, expressando perspectivas mais realistas do que resilientes.</p>
+<img src="https://i.pinimg.com/236x/71/25/89/71258942946590df3cebd5c661639de5.jpg"
+<li>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</li>
+  <tr>
+</tbody>
 </html>
